# sistemer-bot

./: .build.yml  Cargo.nix  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
src/: agora.rs  disciplina.rs  disciplinas.rs  hoje.rs  horarios.rs  lib.rs  main.rs  proxima.rs
