[package]
name = "sistemer-bot"
version = "1.1.4"
description = "Telegram bot for BSI 020"
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://misterio.me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
reqwest = "0.11"
anyhow = "1.0"
regex = "1.5"
chrono = "0.4"
unidecode = "0.3"
