[package]
name = "sistemer-bot"
version = "2.0.0-pre1"
description = "Telegram bot for BSI 020"
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://misterio.me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7.2", features = ["auto-send", "macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.17", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
reqwest = "0.11"
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
indoc = "1.0"
